Changelog for current version:
  * Windows executable is compiled to the main directory (don't ask why)
  * Add subscribed lists (not just created lists). The list names changed; you'll need to delete the old lists

Changelog for 0.9.0:
  * Fix crash when closing a window with pending buddy icons to look up
  * Identi.ca work. Twitter requires OAuth (no longer an option); status.net sites can use either. Note that you'll need to register your own custom application if you want to use OAuth with status.net sites and provide the consumer key and secret in the account options.
  * Restore "delete" tweet option
  * Split the prpltwtr plugin into three: libprpltwtr for the infrastructure, libprpltwtr_twitter for Twitter, and libprpltwtr_statusnet for identi.ca, etc. You may need to manually delete the old versions (but I hope not)
  * Let the user choose the default alias. Suggested by @space_tiger. If you already added your friends as buddies, the fastest thing to do is delete the group and let prpltwtr re-add them after changing this option.

Changelog for 0.8.0:
  * Switch OAuth keys to request DM permission. You will need to re-authorize Prpltwtr (now called PrplTwtr2)
  * Fix crash with the info dialog
  * Add information to the info dialog

Changelog for 0.7.0:
  * Make the list and timeline refresh intervals user set parameters
  * Fix some memory leaks
  * Fix infinite loop when "replying to all" if there's an @ without a name after it (a mistake, or a 4sq checking tweet)
  * Add --without-pidgin option to ./configure for building just prpltwtr and not gtkprpltwtr. Note that the prpltwtr.so is now installed in the libpurple plugin directory! Please manually delete the old one from pidgin's plugin directory.
  * Basic favorites support. The action menu is NOT updated, though, after favoriting / unfavoriting a tweet.
  * Add some useful links to the plugin option menu

Changelog for 0.6.4: